Add and get annual fee
